# LLM-Documentation-Exploration

./: .gitignore  README.md  evaluation.ipynb  pyproject.toml  scratchpad.ipynb
backend/: dropbox.py  evaluate.py  ingest.py  local_base_store.py  main.py  parent_document_preprocess_retriever.py  preprocess.py  retriever.py  settings.py  stuff_refine_documents_chain.py
backend/.vector_store/: index.faiss  index.pkl
backend/dropbox/: dropbox.py
backend/ingest/: ingest.py
backend/ingestion/: ingest.py  preprocess.py  upload_handler.py
backend/retrieval/: chains.py  llm.py  llm_compressor.py  parent_document_preprocess_retriever.py  retrievers.py  stuff_refine_documents_chain.py
backend/retrieve/: chains.py  parent_document_preprocess_retriever.py  retrievers.py
backend/storage/: local_base_store.py  sql_store.py
frontend/: main.py  settings.py
