[tool.poetry]
name = "llm-documentation-explorer"
version = "0.1.0"
description = "For exploring documentation on dropbox using LLMs"
authors = ["Mandla Moyo <mandla@noredink.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dropbox = "^11.36.2"
langchain = "^0.1.16"
openai = "^1.23.2"
ipykernel = "^6.29.4"
setuptools = "^69.5.1"
streamlit = "^1.33.0"
faiss-cpu = "^1.8.0"
tiktoken = "^0.6.0"
langchain-nomic = "^0.0.2"
unstructured = "^0.13.3"
markdown = "^3.6"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
langserve = {extras = ["all"], version = "^0.1.1"}
pydantic-settings = "^2.2.1"
sseclient-py = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
